@@ -1,1 +1,1 @@
-#define luatex_svn_revision 7385
+#define luatex_svn_revision 7387
